--- a/src/scss/_mymixins.scss
+++ b/src/scss/_mymixins.scss
@@ -108,3 +108,7 @@
     //}
   }
 }
+
+@mixin dbg() {
+  background: hsla(0,50,50,.1);
+}
