--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -87,7 +87,7 @@
     }
 
     .logo {
-      transform: translate(10px, -100px);
+      transform: translate(10px, -140px);
     }
 
     @include media-breakpoint-down(xs) {
